# AI-arena

./: .gitignore  LICENSE  README.md  arena.toml  pyproject.toml  results.json
.github/workflows/: ci.yml
codex/agent/: README.md  agent.py  codex_subprocess_bot.py
codex/game/: GAME.md  game.py
docs/: protocol.md  rules.md
gemini/agent/: agent.py  gemini_subprocess_bot.py
gemini/game/: README.md  agent.py  board.py  game.py  gui.py  main.py  play.py  rules.md  test_game.py
models/codex/: README.md
models/codex/agent/: README.md  agent.py
models/codex/game/: README.md
models/gemini/: README.md
models/gemini/agent/: README.md  agent.py
models/opus/agent/: README.md
models/opus/game/: README.md
opus/: README.md
opus/agent/: agent.py  opus_subprocess_bot.py
opus/game/: game.py  gui.py  play.py  rules.md
src/ai_arena/: cli.py  engine.py  game.py  gui.py  json_types.py  loading.py  replay.py  tournament.py
src/ai_arena/agents/: __init__.py  human.py  random_agent.py  subprocess_agent.py
src/ai_arena/games/: __init__.py  tictactoe.py
tests/: test_caldera.py  test_engine.py  test_replay.py  test_skysummit.py  test_subprocess_agent.py
